tests/ui/derives/derives-span-Clone-tuple-struct.rs
// This file was auto-generated using 'src/etc/generate-deriving-span-tests.py'


struct Error;

#[derive(Clone)]
struct Struct(
    Error //~ ERROR
);

fn main() {}
